--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set-window-option -g utf8 on
 # Terminal colors
 # If it does not work, alias tmux='tmux -2' in your shell configuration.
 # don't know why, but it brakes arrow keys on my mac OS. (ver 10.9)
-# set-option -g default-terminal "screen-256color-italics"
+set -g default-terminal "screen-256color"
 # set-option -g terminal-overrides "*256col*:colors=256"
 
 # Mouse features
