--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -g default-terminal "screen-256color"
 # set-option -g terminal-overrides "*256col*:colors=256"
 
 # Mouse features
-set-window-option -g mode-mouse on 
+#set-window-option -g mode-mouse on 
 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
